# LLM-API-Transform-Proxy

./: .gitignore  PRD.md  README.md  init_admin_user.py  init_default_data.py  pyproject.toml  pytest.ini  start.py
config/: app.yml  db.yml
src/: cli_admin.py  config.py  config.py.new  main.py  schemas.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  deepseek_adapter.py  factory.py  gemini_adapter.py  openai_adapter.py
src/config/: resilience_config.py
src/controller/: __init__.py  admin_controller.py  api_controller.py  auth_controller.py
src/core/: http_client_pool.py  resource_monitor.py
src/dao/: __init__.py  api_key_dao.py  log_dao.py  model_dao.py  route_dao.py  system_config_dao.py  user_dao.py
src/middleware/: auth_middleware.py  exception_handler.py  exception_handler.py.new  monitoring.py
src/models/: api_route.py  log.py  model.py  system_config.py  user.py
src/providers/: __init__.py  __init__.py.new  anthropic_provider.py  base.py  base.py.new  deepseek_provider.py  factory.py  gemini_provider.py  openai_provider.py
src/service/: __init__.py  api_key_service.py  chat_completion_service.py  chat_completion_service.py.new  factory.py  interfaces.py  (+6 more)
static/: dashboard.html  login.html
tests/: README.md  conftest.py  test_api_base.py  test_api_key_monitoring.py  test_api_key_security.py  test_api_route.py  test_call_model_api.py  test_config.py  test_db.py  test_framework.py  test_log_api.py  test_model_config.py  test_utils_exception.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js
(+41 files in other folders)
